--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="col-xs-4">
       <button id="shuffle">Shuffle Deck</button>
       <button id="deal">Deal</button>
-      <button id="take">Take</button>
+      <button id="total">Total</button>
     </div>
     <div class="col-xs-4" id="main"></div>
     <div class="col-xs-4" id="main2"></div>
